fix: mul